Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2654

Range request crash in trafficserver 4.2.0

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 4.2.1, 5.0.0
    • HTTP

    Description

      I have updated trafficserver from 4.1.2 to 4.2.0, but the range request crash bug even appear.

      I use "read while writer" feature in my configuration, Maybe the feature cause crash ?
      CONFIG proxy.config.cache.enable_read_while_writer INT 1

      /usr/bin/traffic_server - STACK TRACE:
      /lib64/libpthread.so.0[0x3a8300f4a0]
      /usr/bin/traffic_server(HttpTransact::change_response_header_because_of_range_request(HttpTransact::State*, HTTPHdr*)+0x255)[0x533295]
      /usr/bin/traffic_server(HttpTransact::handle_content_length_header(HttpTransact::State*, HTTPHdr*, HTTPHdr*)+0x2c8)[0x533638]
      /usr/bin/traffic_server(HttpTransact::build_response(HttpTransact::State*, HTTPHdr*, HTTPHdr*, HTTPVersion, HTTPStatus, char const*)+0x460)[0x533b40]
      /usr/bin/traffic_server(HttpTransact::handle_transform_ready(HttpTransact::State*)+0x7d)[0x53a2dd]
      /usr/bin/traffic_server(HttpSM::call_transact_and_set_next_state(void (*)(HttpTransact::State*))+0x28)[0x50b268]
      /usr/bin/traffic_server(HttpSM::state_response_wait_for_transform_read(int, void*)+0xed)[0x514b4d]
      /usr/bin/traffic_server(HttpSM::main_handler(int, void*)+0x70)[0x51feb0]
      /usr/bin/traffic_server(TransformTerminus::handle_event(int, void*)+0x1d6)[0x4df8d6]
      /usr/bin/traffic_server(EThread::process_event(Event*, int)+0x8f)[0x66d37f]
      /usr/bin/traffic_server(EThread::execute()+0x61b)[0x66deab]
      /usr/bin/traffic_server[0x66c89a]
      /lib64/libpthread.so.0[0x3a830077f1]
      /lib64/libc.so.6(clone+0x6d)[0x3a82ce570d]
      

      Thank for your excellent work, the trafficserver is so great!

      Attachments

        Issue Links

          Activity

            People

              zwoop Leif Hedstrom
              lee7883 Chaokovsky Lee
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: