TS-2654 Crash in Range requests with read-while-writer.

(cherry picked from commit dec4fdb96b135aa92b7146c9dd2f6ff7971f9c5d)

Conflicts:
	CHANGES